fixing horizontal profile view on mobile

--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -197,31 +197,31 @@ body {
 		margin-left: -50px;
 	}
 	#chart_hourly_small > div > div:nth-child(1) {
-		max-width: 450px;
+		max-width: 500px;
 	}
 	#chart_hourly_small > div > div:nth-child(1) > div {
-		max-width: 450px;
+		max-width: 500px;
 	}
 	#chart_hourly_small > div > div:nth-child(1) > div > svg {
-		max-width: 450px;
+		max-width: 500px;
 	}
 	#chart_hourly_small > div > div:nth-child(1) > div > svg > rect {
-		max-width: 450px;
+		max-width: 500px;
 	}
 	#chart_daily {
 		margin-left: -50px;
 	}
 	#chart_daily > div > div:nth-child(1) {
-		max-width: 450px;
+		max-width: 500px;
 	}
 	#chart_daily > div > div:nth-child(1) > div {
-		max-width: 450px;
+		max-width: 500px;
 	}
 	#chart_daily > div > div:nth-child(1) > div > svg {
-		max-width: 450px;
+		max-width: 500px;
 	}
 	#chart_daily > div > div:nth-child(1) > div > svg > rect {
-		max-width: 450px;
+		max-width: 500px;
 	}
 	.col-sm-5.meetings-organized {
 		margin-bottom: 25px;
